k8s/web-apps/nginx-web-app/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-web-app
  annotations:
    linkerd.io/inject: enabled
    # Linkerd uses NET_ADMIN and NET_RAW when injecting the proxy, thus the baseline in enforce
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.34.1
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.34.1
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.34.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-web-app
  name: nginx-web-app
  namespace: nginx-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web-app
  template:
    metadata:
      labels:
        app: nginx-web-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - image: nginx:stable-alpine3.23-slim
        name: nginx
        resources: 
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE # Allow binding to port 80
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 80
          protocol: TCP
      volumeMounts:
      - name: tmp
        mountPath: /tmp
      - name: nginx-cache
        mountPath: /var/cache/nginx
      - name: nginx-run
        mountPath: /var/run/nginx
    volumes:
    - name: tmp
      emptyDir: {}
    - name: nginx-cache
      emptyDir: {}
    - name: nginx-run
      emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-app
  namespace: nginx-web-app
  labels:
    app: nginx-web-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: nginx-web-app
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-web-app-gateway
  namespace: nginx-web-app
  annotations:
    cert-manager.io/issuer: nginx-web-app-issuer
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: brightpick.app.test
    name: websecure
    port: 8443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: nginx-web-app-tls
  - allowedRoutes:
      namespaces:
        from: Same
    name: web
    port: 8000
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-web-app
  namespace: nginx-web-app
spec:
  parentRefs:
    - name: nginx-web-app-gateway
      namespace: nginx-web-app
  hostnames:
    - brightpick.app.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-web-app
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-web-app-network-policy
  namespace: nginx-web-app
spec:
  podSelector:
    matchLabels:
      app: nginx-web-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 80
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: linkerd
    - podSelector:
        matchLabels:
         {}
    #       linkerd.io/proxy-deployment: linkerd-identity
    # ports: {}
    # - protocol: TCP
    #   port: 8080
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: traefik-traefik
    ports:
    - protocol: TCP
      port: 80
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: linkerd
    - podSelector:
        matchLabels:
          {}
    #       linkerd.io/proxy-deployment: linkerd-identity
    # ports: {}
    # - protocol: TCP
    #   port: 8080
